# hs6502

./: .gitignore  hs6502.cabal
src/: Main.hs
src/Emulator/: Instructions.hs  Machine.hs  Memory.hs  Registers.hs
